--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "levered-demo-onboarding-flow",
   "private": true,
   "version": "0.0.0",
   "type": "module",
